[update] 参考リンク修正

--- a/_posts/2021-02-25-7.md
+++ b/_posts/2021-02-25-7.md
@@ -15,4 +15,4 @@ title: 7. DXはオルタナティブの発見です
 ### 関連リンク
 
 - [ＤＸ加速へ３００億円投資　「顧客サービス変える」―りそなＨＤ社長](https://www.jiji.com/jc/article?k=2020120201126&g=eco)
-- [DX銘柄／攻めのIT経営銘柄 | 経済産業省](https://www.meti.go.jp/policy/it_policy/investment/keiei_meigara/keiei_meigara.html)
+- [DX銘柄／攻めのIT経営銘柄 - 経済産業省](https://www.meti.go.jp/policy/it_policy/investment/keiei_meigara/keiei_meigara.html)
